# scarce_data_gui

./: .gitignore  Contribution.md  Dockerfile  LICENSE  README.md  dodo.py  mypy.ini  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg
example/: OvenExample.py  README.md  oven_model.py
example/.streamlit/: config.toml
experimental_design/: __init__.py  misc.py
experimental_design/analysis/: __init__.py  biggest_hole.py  discrepancy.py
experimental_design/core/: __init__.py  _functional.py  _io.py  misc.py
experimental_design/criterion/: __init__.py  criterion.py  phip_criterion.py
experimental_design/data_parts/: __init__.py  additional_data_parts.py  container.py  data_field.py  generator.py  instance_part.py  test_function.py
experimental_design/dataset/: __init__.py  active_learning.py  dataset.py  labeling.py  part_design_handler.py  test.py
experimental_design/latin_hypercube/: __init__.py  sliced_lhc_design.py
experimental_design/optimisation/: optimisation_base.py  simulated_annealing.py
experimental_design/visualisation/: __init__.py  _visualisation.py  plots.py  utils.py
guide_active_learning/: __init__.py  misc.py
guide_active_learning/ActiveLearning/: __init__.py  active_learning.py  active_learning_misc.py  investigation.py  query.py
guide_active_learning/GUIDE/: __init__.py  guide_analysis.py  guide_ensemble.py  guide_misc.py  guide_tree.py  split_points.py  splitting.py
guide_active_learning/RotationForest/: RotationForest.py  __init__.py
guide_active_learning/analysis/: __init__.py  analyse_results.py
guide_active_learning/core/: __init__.py  _math.py  _misc.py  _visualisation.py  io.py
scarce_data_gui/: __init__.py  _version.py  misc.py
scarce_data_gui/db/: __init__.py  database.py  queries.py
scarce_data_gui/page_parts/: __init__.py  _design.py  data_aquisition.py  evaluation.py  html.py  page_settings.py  page_utils.py  results.py
scarce_data_gui/streamlit_modules/: __init__.py  authentication.py
scarce_data_gui/utils/: __init__.py  _utils.py  io.py  visualisation.py
streamlit_pages/: Home.py  auth_config.yaml  gui_style.css  login.coffee  settings.ini
streamlit_pages/pages/: 1_Login.py  2_Design.py  3_Dataset.py  4_Labeling.py  5_ActiveLearning.py  6_AIModel.py  7_Evaluation.py
