[metadata]
name = scarce_data_gui
platforms = any
description = AI4ScaDa generalised Artificial Intelligence Workflow for Scarce Data
long_description = file: README.rst
long_description_content_type = text/x-rst
keywords = python, GUI, Label, information fusion, dataset, synthetic data
url = https://github.com/jbueltemeier/scarce_data_gui
author = Julian Bültemeier, Marvin Schöne, Bjarne Jaster, Volker Lohweg, Martin Kohlhase
author_email = julian.bueltemeier@th-owl.de
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Typing :: Typed
project_urls =
    Source = https://github.com/jbueltemeier/scarce_data_gui

[options]
packages = find:
include_package_data = True
python_requires = >=3.8
install_requires =
    streamlit == 1.40.1
    streamlit-authenticator >= 0.3.2
    streamlit-bridge >= 1.1.3
    streamlit-extras >= 0.3.0
    streamlit
    altair >= 4.2.2
    pillow >= 9.5.0
    SQLAlchemy >= 2.0.25
    mysql-connector-python >= 8.3.0
    pandas >= 2.0.3
    matplotlib >= 3.7.5
    pandas
    joblib
    graphviz
    scipy
    openpyxl
    seaborn
    dot2tex
    scikit-learn
    numpy >= 1.24.4
    lhsmdu
    sobol-seq
    plotly
    m5py

[options.packages.find]
exclude =
    tests*
